# orionbelt-runner

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
examples/: monthly-revenue-2026-04-29.html  monthly-revenue-2026-04-29.md  monthly-revenue-2026-04-29.run.yaml  monthly-revenue.yaml
examples/monthly-revenue-2026-04-29_exports/: revenue_by_nation.tsv  top_orders_raw.tsv  total_revenue.tsv
schema/: README.md
src/orionbelt_runner/: __init__.py  cli.py  client.py  exports.py  report.py  runlog.py  runner.py  spec.py
tests/: test_client.py  test_exports.py  test_report_html.py  test_report_pdf.py  test_runlog.py  test_runner.py
